--- a/news/app/src/main/res/layout/fragment_subscribe_key.xml
+++ b/news/app/src/main/res/layout/fragment_subscribe_key.xml
@@ -42,10 +42,16 @@
         android:layout_height="4.5dp"
         android:background="@color/divide" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_doc"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_doc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
