--- a/news/app/src/main/res/layout/activity_setting.xml
+++ b/news/app/src/main/res/layout/activity_setting.xml
@@ -42,7 +42,7 @@
         android:paddingLeft="16.5dp"
         android:paddingRight="20dp"
         android:text="账号与安全"
-
+android:textColor="#333"
         android:textSize="16sp"></TextView>
 
     <View
@@ -66,6 +66,8 @@
             android:layout_width="wrap_content"
             android:layout_height="44dp"
             android:gravity="center_vertical"
+            android:textSize="16sp"
+            android:textColor="#333"
             android:text="字体大小" />
 
         <TextView
@@ -116,7 +118,7 @@
         android:id="@+id/tv_update"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-
+        android:textColor="#333"
         android:background="@color/white"
         android:drawableRight="@mipmap/step_arrow_icon"
         android:gravity="center_vertical"
@@ -141,6 +143,7 @@
         android:gravity="center_vertical"
         android:paddingLeft="16.5dp"
         android:paddingRight="20dp"
+        android:textColor="#333"
         android:text="分享软件"
         android:textSize="16sp"></TextView>
 
