--- a/news/app/src/main/res/layout/item_one_big_img.xml
+++ b/news/app/src/main/res/layout/item_one_big_img.xml
@@ -10,7 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16.5dp"
+        android:layout_marginRight="16.5dp"
         android:layout_marginTop="12.5dp"
+        android:lines="1"
         android:text="灾难来了你准备好了吗"
         android:textColor="@color/black_text"
         android:textSize="14sp" />
@@ -36,6 +38,7 @@
             android:layout_marginBottom="10dp"
             android:layout_marginRight="30dp"
             android:layout_marginTop="10dp"
+            android:lines="1"
             android:text="西安数图研讨会通知"
             android:textColor="@color/wanfang_gray_text"
             android:textSize="10sp" />
