--- a/news/app/src/main/res/layout/item_one_small_img.xml
+++ b/news/app/src/main/res/layout/item_one_small_img.xml
@@ -9,22 +9,26 @@
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12.5dp"
         android:layout_marginLeft="16.5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="12.5dp"
         android:text="灾难来了你准备好了吗"
+        android:lines="1"
         android:textColor="@color/black_text"
+        android:layout_toLeftOf="@id/iv"
         android:textSize="14sp" />
 
     <TextView
         android:id="@+id/tv_source"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16.5dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="12.5dp"
+        android:layout_marginLeft="16.5dp"
         android:layout_marginRight="30dp"
         android:layout_toLeftOf="@+id/iv"
         android:text="西安数图研讨会通知"
+        android:lines="1"
         android:textColor="@color/wanfang_gray_text"
         android:textSize="10sp" />
 
@@ -32,11 +36,11 @@
         android:id="@+id/iv_delete"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_marginRight="15dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="8.5dp"
-        android:padding="7dp"
+        android:layout_marginRight="15dp"
         android:layout_toLeftOf="@+id/iv"
+        android:padding="7dp"
         android:src="@mipmap/item_delete_his" />
 
     <ImageView
@@ -47,11 +51,12 @@
         android:layout_marginRight="16.5dp"
         android:layout_marginTop="12.5dp"
         android:scaleType="centerCrop" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginLeft="12.5dp"
         android:layout_marginRight="12.5dp"
-        android:layout_alignParentBottom="true"
         android:background="@color/divide" />
 </RelativeLayout>
