--- a/news/app/src/main/res/layout/item_three_img.xml
+++ b/news/app/src/main/res/layout/item_three_img.xml
@@ -10,6 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16.5dp"
+        android:lines="1"
+        android:layout_marginRight="16.5dp"
         android:layout_marginTop="12.5dp"
         android:text="灾难来了你准备好了吗"
         android:textColor="@color/black_text"
@@ -57,6 +59,7 @@
             android:layout_marginBottom="10dp"
             android:layout_marginRight="30dp"
             android:layout_marginTop="10dp"
+            android:lines="1"
             android:text="西安数图研讨会通知"
             android:textColor="@color/wanfang_gray_text"
             android:textSize="10sp" />
