--- a/news/app/src/main/res/layout/item_hot_left.xml
+++ b/news/app/src/main/res/layout/item_hot_left.xml
@@ -17,6 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
+        android:lines="1"
         android:text="计算机维护"
         android:textColor="@color/gray_text_6"
         android:textSize="12sp" />
